@@ -1,6 +1,7 @@
 2010-03-14  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_osd_toolbar.c: CHANGE: Set the alignment of OSD toolbar to center
+	ADD: Hide play/pause button of OSD Toolbar when status changed
 
 2010-03-13  Tiger Soldier  <tigersoldi@gmail.com>
 
